--- a/plugin.xml
+++ b/plugin.xml
@@ -61,8 +61,9 @@
                 <param name="ios-package" value="CDVStatusBar" />
                 <param name="onload" value="true" />
             </feature>
-            <preference name="StatusBarOverlaysWebView" value="true" />
+            <preference name="StatusBarOverlaysWebView" value="false" />
             <preference name="StatusBarStyle" value="lightcontent" />
+          <preference name="StatusBarBackgroundColor" value="#242631" />
         </config-file>
 
         <header-file src="src/ios/CDVStatusBar.h" />
