--- a/plugin.xml
+++ b/plugin.xml
@@ -62,7 +62,7 @@
                 <param name="onload" value="true" />
             </feature>
             <preference name="StatusBarOverlaysWebView" value="false" />
-            <preference name="StatusBarStyle" value="lightcontent" />
+            <preference name="StatusBarStyle" value="blackopaque" />
           <preference name="StatusBarBackgroundColor" value="#242631" />
         </config-file>
 
